--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,9 @@
         <li class="nav-item" style="margin-top: -12px">
           <a class="nav-link" routerLink="download">download</a>
         </li>
+        <li class="nav-item" style="margin-top: -12px">
+          <a class="nav-link" routerLink="scroll">scroll</a>
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="text" placeholder="Search" />
