--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,6 +47,12 @@
         <li class="nav-item" style="margin-top: -12px">
           <a class="nav-link" routerLink="scroll">scroll</a>
         </li>
+        <li class="nav-item" style="margin-top: -12px">
+          <a class="nav-link" routerLink="counter">counter</a>
+        </li>
+        <li class="nav-item" style="margin-top: -12px">
+          <a class="nav-link" routerLink="post">post</a>
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="text" placeholder="Search" />
