--- a/src/app/post/post.component.css
+++ b/src/app/post/post.component.css
@@ -25,3 +25,13 @@
     margin: 0;
     color: #666;
   }
+
+  .pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination button {
+    margin: 0 5px;
+}
