--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,9 +1,15 @@
-<div class="posts-container">
+  <div class="posts-container">
     <h3>Posts from API</h3>
     <div class="posts-list">
-      <div *ngFor="let post of posts$ | async" class="post-item">
-        <h4>{{ post.title }}</h4>
-        <p>{{ post.body }}</p>
-      </div>
+        <div *ngFor="let post of paginatedPosts" class="post-item">
+            <h4>{{ post.title }}</h4>
+            <p>{{ post.body }}</p>
+        </div>
     </div>
-  </div>
+
+    <div class="pagination">
+        <button (click)="previousPage()" [disabled]="currentPage === 1">Previous</button>
+        <span>Page {{ currentPage }}</span>
+        <button (click)="nextPage()" [disabled]="currentPage * postsPerPage >= posts.length">Next</button>
+    </div>
+</div>
