--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,11 +53,14 @@
         <li class="nav-item" style="margin-top: -12px">
           <a class="nav-link" routerLink="post">post</a>
         </li>
+        <li class="nav-item" style="margin-top: -12px">
+          <a class="nav-link" routerLink="countertimer">counterTimer</a>
+        </li>
       </ul>
-      <form class="d-flex">
+      <!-- <form class="d-flex">
         <input class="form-control me-2" type="text" placeholder="Search" />
         <button class="btn btn-primary" type="button">Search</button>
-      </form>
+      </form> -->
     </div>
   </div>
 </nav>
