--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,6 +56,9 @@
         <li class="nav-item" style="margin-top: -12px">
           <a class="nav-link" routerLink="countertimer">counterTimer</a>
         </li>
+        <li class="nav-item" style="margin-top: -12px">
+          <a class="nav-link" routerLink="transferlist">transfer_list</a>
+        </li>
       </ul>
       <!-- <form class="d-flex">
         <input class="form-control me-2" type="text" placeholder="Search" />
